Fix: Fix errors of algorithms and delete redundant import